small update of pagination.

--- a/shop/templates/shop/_layout.html
+++ b/shop/templates/shop/_layout.html
@@ -25,7 +25,13 @@
             },
         }
     </script>
+    <!-- for animations-->
     <script src="https://cdn.jsdelivr.net/npm/animejs@4.1.2/lib/anime.iife.min.js"></script>
+    <!-- for templates and repetative elements(react like components)-->
+    <script
+      src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.3.5/dist/alpine.min.js"
+      defer
+    ></script>
 
     <!-- icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
